--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "build": "cd view && rm -R build && npm run build",
-    "heroku-postbuild": "npm run migrate && npm run seed && cd view && npm install && npm run build"
+    "heroku-postbuild": "cd view && npm install && npm run build",
+    "migrate": "npx prisma migrate dev --name init",
+    "seed": "npx prisma migrate dev --name init && prisma migrate reset"
   },
   "dependencies": {
+    "@prisma/client": "^3.2.1",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6",
-    "morgan": "^1.10.0",
-    "prisma": "^3.2.1"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "prisma": "^3.2.1"
   },
   "engines": {
     "node": ">=15.0.0"
