--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "dev": "nodemon ./bin/www",
     "build": "cd view && rm -R build && npm run build",
     "heroku-postbuild": "cd view && npm install && npm run build",
