--- a/src/view/package.json
+++ b/src/view/package.json
@@ -33,6 +33,7 @@
     "object-hash": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "^4.0.3"
   },
   "proxy": "http://localhost:3001"
